syntax = "proto3";
package bilibili.app.distribution.play.v1;
import "bilibili/app/distribution/distribution.proto";
import "bilibili/app/distribution/options.proto";
import "bilibili/extension/crane/crane.proto";

option go_package = "git.bilibili.co/bapis/bapis-go/bilibili/app/distribution/setting/play;play";
option java_package = "com.bapis.bilibili.app.distribution.setting.play";
option java_multiple_files = true;
option objc_class_prefix = "BAPIAppDistributionSettingPlay";
option (bilibili.extension.crane.bili_grpc_host) = "main.grpc.bilibili.com";
option (bilibili.app.distribution.v1.preference) = "PlayConfig";

message PlayConfig {
    // 视频详情页直接播放
    bilibili.app.distribution.v1.BoolValue shouldAutoPlay = 1 [(bilibili.app.distribution.v1.default_value) = { bool_value: true }];
    // 视频详情页直接全屏
    bilibili.app.distribution.v1.BoolValue shouldAutoFullScreen = 2;
    // 启用https播放
    bilibili.app.distribution.v1.BoolValue enablePlayurlHTTPS = 3;
    // 弹幕快捷选择功能
    bilibili.app.distribution.v1.BoolValue enableDanmakuInteraction = 4 [(bilibili.app.distribution.v1.default_value) = { bool_value: true }];
    // 选择小窗播放尺寸
    bilibili.app.distribution.v1.Int64Value smallScreenStatus = 5 [(bilibili.app.distribution.v1.refenum) = "SmallScreenStatus", (bilibili.app.distribution.v1.default_value) = { int64_value: 2 }];
    enum SmallScreenStatus {
        SSS_UNKNOW = 0;
        Small = 1;
        Default = 2;
        Large = 3;
    }
    // 解码设置
    bilibili.app.distribution.v1.Int64Value playerCodecModeKey = 6 [(bilibili.app.distribution.v1.refenum) = "PlayerCodecMode"];
    enum PlayerCodecMode {
        Auto = 0;
        V3Hardware = 1;
        Software = 2;
    }
    // 启用重力感应旋屏
    bilibili.app.distribution.v1.BoolValue enableGravityRotateScreen = 7 [(bilibili.app.distribution.v1.default_value) = { bool_value: true }];
    // 使用等宽字体
    bilibili.app.distribution.v1.BoolValue enableDanmakuMonospaced = 8 [(bilibili.app.distribution.v1.default_value) = { bool_value: true }];
    // 编辑字幕
    bilibili.app.distribution.v1.BoolValue enableEditSubtitle = 9;
    // 字幕开关
    bilibili.app.distribution.v1.BoolValue enableSubtitle = 10;
    //滤镜
    bilibili.app.distribution.v1.Int64Value colorFilter = 11 [(bilibili.app.distribution.v1.refenum) = "ColorFilterEnum"];
    enum ColorFilterEnum {
        NoColor = 0;
        Red = 1;
        Green = 2;
        Blue = 3;
    }
    // 竖屏稿件全屏时自动进入看一看
    bilibili.app.distribution.v1.BoolValue shouldAutoStory = 12 [(bilibili.app.distribution.v1.default_value) = { bool_value: true }];
    //横屏稿件半屏时露出看一看
    bilibili.app.distribution.v1.BoolValue landscapeAutoStory = 13  [(bilibili.app.distribution.v1.default_value) = { bool_value: true }];
}
